--- a/03UserFormWithAuthentication/server/package.json
+++ b/03UserFormWithAuthentication/server/package.json
@@ -1,32 +1,33 @@
 {
-  "name": "server",
+  "name": "auth-server",
   "version": "1.0.0",
-  "description": "User Form With JWT Auth",
+  "description": "auth server with jwt",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
   "keywords": [
-    "NODE",
-    "MONGO",
-    "JWT",
-    "EXPRESS",
-    "VUE",
-    "FORM"
+    "autj",
+    "jwt",
+    "server",
+    "node",
+    "express"
   ],
   "author": "Jaykishan@Kotak",
   "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.20.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.2",
-    "express": "^4.18.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.6.12"
-  },
   "devDependencies": {
     "nodemon": "^2.0.20"
+  },
+  "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.20.0",
+    "core-js": "^3.25.5",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.7.5"
   }
 }
